crates/shaken/snapshots/shaken__modules__user_defined__tests__unauthorized@alias.snap
---
source: crates/shaken/src/modules/user_defined/tests.rs
expression: mock.get_response()
---
kind:
  - Problem: that requires you to be a moderator or the broadcaster

